--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="mb-3 form-check">
                                       <input type="checkbox" class="form-check-input" id="sessiom-check">
-                                      <label class="form-check-label" for="exampleCheck1">Permanecer logado</label>
+                                      <label class="form-check-label" for="exampleCheck1">Botão Obrigatório</label>
                                     </div>
                                     <button type="submit" class="btn button-login">Entrar</button>
                                 </form>
